--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "engines": {
     "vscode": "^1.92.0"
   },
+  "icon": "images/icon.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/Darknoon5891/llm-vscode-plugin"
