--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "llm-vscode-plugin",
   "description": "LLM Extension for VSCode",
   "publisher": "Darknoon5891",
-  "version": "0.2.5",
+  "version": "0.3.0",
   "engines": {
     "vscode": "^1.92.0"
   },
@@ -144,7 +144,9 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.27.1",
     "axios": "^1.7.4",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "openai": "^4.57.1"
   }
 }
