--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "llm-vscode-plugin",
   "displayName": "llm-vscode-plugin",
   "description": "LLM Extension for VSCode",
-  "publisher": "Darknoon5891",
+  "publisher": "DarkNoon",
   "version": "0.4.0",
   "engines": {
     "vscode": "^1.92.0"
